Removed sort in critique table and some css fixes for font-family and size

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,7 +53,7 @@
 .page-title {
   display: inline-block;
   padding-right: 24px;
-  color: var(--backgroundGreen);
+  color: var(--colorRed);
   font-weight: 800;
 }
 
