--- a/src/app/admin/books/books.component.css
+++ b/src/app/admin/books/books.component.css
@@ -63,7 +63,7 @@ ul.books-list {
 .btn-add {
   background: var(--light-green);
   font-weight: bold;
-  color: #343919;
+  color: #6c8859;
 }
 
 .btn {
