--- a/src/app/admin/critiques/critiques.component.css
+++ b/src/app/admin/critiques/critiques.component.css
@@ -38,9 +38,9 @@ span.mat-list-item-content {
 }
 
 .btn-add {
-  background: #d3daaa;
+  background: var(--light-green);
   font-weight: bold;
-  color: #343919;
+  color: #6c8859;
 }
 
 .btn {
