--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <h2 class="admin-title">ניהול</h2>
 <div class="container">
   <div class="admin-actions">
-    <a routerLink="/admin/catalogs" class="btn mat-button" (click)="activeLink = '/admin/catalogs'" [ngClass]="{'active' : isActive('/admin/catalogs')}">קטלוגים</a>
-    <a routerLink="/admin/books" class="btn mat-button" (click)="activeLink = '/admin/my-books'" [ngClass]="{'active' : isActive('/admin/my-books')}">ספרים</a>
-    <a routerLink="/admin/articles" class="btn mat-button" (click)="activeLink = '/admin/articles'" [ngClass]="{'active' : isActive('/admin/articles')}">מאמרים</a>
-    <a routerLink="/admin/critiques" class="btn mat-button" (click)="activeLink = '/admin/critiques'" [ngClass]="{'active' : isActive('/admin/critique')}">ביקורת תערוכות</a>
-    <a routerLink="/admin/book-reviews" class="btn mat-button" (click)="activeLink = '/admin/book-reviews'" [ngClass]="{'active' : isActive('/admin/book-reviews')}">בקורות</a>
-    <a routerLink="/admin/video-lectures" class="btn mat-button" (click)="activeLink = '/admin/video-lectures'" [ngClass]="{'active' : isActive('/admin/video-lecture')}">הרצאות מוקלטות</a>
+    <a routerLink="/admin/catalogs" class="btn mat-button">קטלוגים</a>
+    <a routerLink="/admin/my-books" class="btn mat-button">ספרים</a>
+    <a routerLink="/admin/critiques" class="btn mat-button">ביקורת תערוכות</a>
+    <a routerLink="/admin/articles" class="btn mat-button">מאמרים</a>
+    <a routerLink="/admin/books-review" class="btn mat-button">בקורות</a>
+    <a routerLink="/admin/video-lectures" class="btn mat-button">הרצאות מוקלטות</a>
   </div>
   <div class="outlet">
     <router-outlet></router-outlet>
