--- a/src/app/admin/video-lectures/video-lectures.component.html
+++ b/src/app/admin/video-lectures/video-lectures.component.html
@@ -1,7 +1,6 @@
-<h3>הרצאות מוקלטות</h3>
 <div class="actions">
   <button (click)="addVideoLecture()" class="btn-add">
-    הוסף מאמר
+    הוסף קטע מדיה
   </button>
 </div>
 <div class="videos-container">
