--- a/src/styles.css
+++ b/src/styles.css
@@ -80,9 +80,9 @@ a {
   /*color: var(--colorRed);*/
 }
 
-.mat-list-base .mat-list-item .mat-list-item-content {
-  align-items: flex-start !important;
-}
+/*.mat-list-base .mat-list-item .mat-list-item-content {*/
+/*  align-items: flex-start !important;*/
+/*}*/
 
 .mat-list-base .mat-list-item.mat-list-item-with-avatar {
   height: max-content !important;
