--- a/src/app/admin/book-reviews/add-edit-review/add-edit-review.component.css
+++ b/src/app/admin/book-reviews/add-edit-review/add-edit-review.component.css
@@ -1,7 +1,8 @@
 .mat-dialog-title h3 {
-  background: #758038;
+  background: #6c8859;
   color: #fff;
-  line-height: 40px;
+  font-size: 24px;
+  padding: 12px;
 }
 
 .mat-dialog-content {
