--- a/src/app/admin/books/add-edit-book/add-edit-book.component.css
+++ b/src/app/admin/books/add-edit-book/add-edit-book.component.css
@@ -1,8 +1,8 @@
 .mat-dialog-title h3 {
-  background: #758038;
+  background: #6c8859;
   color: #fff;
-  text-align: center;
-  line-height: 40px;
+  font-size: 24px;
+  padding: 12px;
 }
 
 .mat-dialog-content {
@@ -21,4 +21,11 @@ mat-dialog-actions.mat-dialog-actions {
   gap: 1em;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+button.btn {
+  background: var(--light-green);
+  font-weight: bold;
+  color: #6c8859;
+  font-size: 14px;
 }
