--- a/src/app/admin/catalogs/edit-catalog/edit-catalog.component.css
+++ b/src/app/admin/catalogs/edit-catalog/edit-catalog.component.css
@@ -1,5 +1,5 @@
 h3 {
-  background: #3d6657;
+  background: #6c8859;
   color: #fff;
   font-size: 24px;
   padding: 12px;
@@ -15,14 +15,21 @@ h3 {
   gap: 12px;
 }
 
+.mat-dialog-actions {
+  justify-content: flex-end;
+  padding-left: 1em;
+}
+
 .btn.btn-success {
   grid-column: 1/2;
 }
 
 .badge-success {
-  background:var(--light-green) ;
+  background:var(--light-green);
+  color: #6c8859;
+  font-weight: bold;
 }
 
 .badge.close {
-  background:#FFECAD ;
+  background:var(--light-green);
 }
