--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <ul class="navbar-nav mr-auto">
   <li class="nav-item">
-    <div routerLink="catalogs" [ngClass]="{'nav-link': true, 'active' : isActive('catalogs')}">קטלוגים
+    <div routerLink="catalogs/list" [ngClass]="{'nav-link': true, 'active' : isActive('catalogs')}">קטלוגים
       <mat-icon class="active-chev">chevron_left</mat-icon>
     </div>
   </li>
