--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -98,16 +98,20 @@
 }
 
 .sidebar {
-  padding: 0 32px 0 0;
+  padding: 42px 32px 0 0;
   overflow-y: hidden;
+  background: url("../assets/images/flourish.webp") no-repeat;
+  background-position: center top 1em;
+  /*border-top: 1px var(--backgroundBlack);*/
+  /*border-top-style: double;*/
 }
 
-.sidebar-top-border {
-  height: 7px;
-  background-color: #22242a;
-  width: inherit;
-  transition: opacity .1s ease-out;
-}
+/*.sidebar-top-border {*/
+/*  height: 5px;*/
+/*  background-color: #22242a;*/
+/*  width: inherit;*/
+/*  transition: opacity .1s ease-out;*/
+/*}*/
 
 .pages {
   margin-top: 92px;
