--- a/src/styles.css
+++ b/src/styles.css
@@ -146,6 +146,12 @@ mat-date-range-picker.mat-datepicker-content {
   font-family: "David Libre", serif;
 }
 
+.mat-tooltip {
+  font-size: 24px;
+  line-height: 30px;
+  min-width: 430px;
+}
+
 mat-card-header.board-header .mat-card-header-text {
   margin: 0;
 }
