--- a/src/app/critiques/critique-list.component.html
+++ b/src/app/critiques/critique-list.component.html
@@ -39,7 +39,7 @@
         <mat-header-cell *matHeaderCellDef>תאריך</mat-header-cell>
         <mat-cell *matCellDef="let critique">
           <span class="mobile-label">תאריך:</span>
-          <span *ngIf="critique.date !== 'Invalid Date'">{{critique.date}}</span>
+          <span *ngIf="critique.date">{{critique.date | date: 'dd/MM/yyyy'}}</span>
         </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
