--- a/src/app/video-lecture/video-lecture.component.css
+++ b/src/app/video-lecture/video-lecture.component.css
@@ -13,9 +13,9 @@
   margin: 0 auto;
   padding: 3em 1em 1em 1em;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap:1.5em;
-  max-height: 700px;
+  max-height: calc(100vh - 96px);
   overflow-y: scroll;
 }
 
