--- a/src/app/admin/books/add-edit-book/add-edit-book.component.html
+++ b/src/app/admin/books/add-edit-book/add-edit-book.component.html
@@ -31,12 +31,16 @@
       <input matInput formControlName="publication_year" class="form-control" name="publication_year" placeholder="הכנס שנת הוצאה" />
     </mat-form-field>
     <mat-form-field>
-      <mat-label>מאמר</mat-label>
-      <input matInput formControlName="article" class="form-control" name="article" placeholder="הכנס מאמר" />
+      <mat-label>בקורת</mat-label>
+      <input matInput formControlName="article" class="form-control" name="article" placeholder="הכנס בקורת" />
     </mat-form-field>
     <mat-form-field>
-      <mat-label>קישור</mat-label>
-      <input matInput formControlName="link" class="form-control" name="link" placeholder="הכנס קישור" />
+      <mat-label>בקורת 2</mat-label>
+      <input matInput formControlName="article2" class="form-control" name="article" placeholder="הכנס בקורת2" />
+    </mat-form-field>
+    <mat-form-field class="more-info">
+      <mat-label>מידע נוסף</mat-label>
+      <textarea matInput formControlName="link" placeholder="הכנס מידע נוסף"></textarea>
     </mat-form-field>
   </div>
   </form>
