--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -5,7 +5,7 @@
     </div>
   </li>
   <li class="nav-item">
-    <div routerLink="my-books" [ngClass]="{'nav-link': true, 'active' : isActive('my-books')}">ספרים
+    <div routerLink="my-books/list" [ngClass]="{'nav-link': true, 'active' : isActive('my-books')}">ספרים
       <mat-icon class="active-chev">chevron_left</mat-icon>
     </div>
   </li>
