--- a/src/app/admin/books/books.component.css
+++ b/src/app/admin/books/books.component.css
@@ -3,35 +3,20 @@
   margin: 0 auto;
   padding: 1em;
   overflow-y: scroll;
-  max-height: 600px;
+  /*max-height: 600px;*/
 }
 
-.book-cover {
-  /*width: 250px;*/
+.book-cover img {
+  width:320px;
+  height: 430px;
 }
 
 .books-list {
   list-style-type: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 32px;
+  gap: 1em;
   grid-template-rows: auto;
-}
-
-h3 {
-  font-size: 28px;
-}
-
-h4 {
-  text-align: right;
-  font-weight: bolder;
-  font-size: 20px;
-  cursor: pointer;
-  display: inline-block;
-}
-
-h4:hover {
-  color: #606200;
 }
 
 ul.books-list {
@@ -42,6 +27,7 @@ ul.books-list {
 }
 
 .book-item {
+  flex-direction: column;
   align-items: center;
   line-height: 20px;
   padding: 0.5em;
