--- a/src/app/admin/books/books.component.html
+++ b/src/app/admin/books/books.component.html
@@ -10,9 +10,9 @@
         <img *ngIf="book?.cover" src="{{book?.cover}}" alt="img" width="160">
       </div>
       <div class="book-details">
-        <h4>{{book.title}}</h4>
-        <p>{{book.publisher}}, {{book.publication_year}}</p>
-        <a *ngIf="book?.article" target="_blank" href="{{book.article}}">בקורת על הספר</a>
+        <div class="reviews">
+          <a *ngIf="book?.article" target="_blank" href="{{book.article}}">בקורת על הספר</a>
+          <span *ngIf="book?.article2">, <a target="_blank" href="{{book.article2}}">בקורת נוספת</a></span></div>
         <a *ngIf="book?.link" target="_blank" href="{{book.link}}">מידע נוסף</a>
         <div class="actions">
           <button class="btn" (click)="deleteDialog(book.id, book.title)" mat-button>
