--- a/src/app/my-books/books/my-books.component.css
+++ b/src/app/my-books/books/my-books.component.css
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 .search {
   margin-bottom: 16px;
 }
@@ -14,7 +18,8 @@ input::placeholder {
 }
 
 .book-cover img {
-  max-height: 205px;
+  width:320px;
+  height: 430px;
 }
 
 .books-list-container {
@@ -24,7 +29,7 @@ input::placeholder {
 .books-list {
   list-style-type: none;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   /*gap: 32px;*/
   grid-template-rows: auto;
   max-height: 700px;
@@ -52,7 +57,7 @@ h3 {
 
 .book-item {
   display: flex;
-  text-align: right;
+  flex-direction: column;
   border-left: 1px solid var(--backgroundBlack);
   gap: 1em;
   padding: 1em;
