--- a/src/styles.css
+++ b/src/styles.css
@@ -149,7 +149,13 @@ mat-date-range-picker.mat-datepicker-content {
 .mat-tooltip {
   font-size: 24px;
   line-height: 30px;
-  min-width: 430px;
+  min-width: 320px;
+  max-width: 430px;
+}
+
+.book-img.mat-tooltip {
+  min-width: revert;
+  max-width: 320px !important;
 }
 
 mat-card-header.board-header .mat-card-header-text {
